--- a/styles/style.css
+++ b/styles/style.css
@@ -120,18 +120,23 @@ p {
 /* hero */
 
 .hero {
-  background-image: url("header-bike.jpg");
+  background-image: url("/Users/elenabarker/Desktop/CYF Elena/bikes-for-refugees/images/header-bike.jpg");
   background-color: var(--grey-light);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .hero h1 {
   margin-bottom: 1rem;
   font-size: 2.5rem;
+  color: white;
 }
 
 .hero p {
   font-size: 1.2rem;
   margin-bottom: 2rem;
+  color: white;
 }
 
 
@@ -248,3 +253,6 @@ p {
     padding-right: 2rem;
   }
 }
+image {width: 100%;
+display: block;
+margin: auto;}
